[package]
name = "trust-dns-https"
version = "0.19.2"
authors = ["Benjamin Fry <benjaminfry@me.com>"]
edition = "2018"

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = """
Trust-DNS is a safe and secure DNS library. This is an extension for the Trust-DNS client to use DNS over HTTPS.
"""

# These URLs point to more information about the repository
documentation = "https://docs.rs/trust-dns-https"
homepage = "http://www.trust-dns.org/index.html"
repository = "https://github.com/bluejekyll/trust-dns"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["DNS", "BIND", "dig", "named", "dnssec"]
categories = ["network-programming"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MIT/Apache-2.0"

[badges]
#github-actions = { repository = "bluejekyll/trust-dns", branch = "master", workflow = "test" }
codecov = { repository = "bluejekyll/trust-dns", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[features]

dns-over-https-rustls = []

# WARNING: there is a bug in the mutual tls auth code at the moment see issue #100
# mtls = ["tls"]

[lib]
name = "trust_dns_https"
path = "src/lib.rs"

[dependencies]
backtrace = "0.3.43"
bytes = "0.5"
data-encoding = "2.1.0"
futures = { version = "0.3.0", default-features = false, features = ["std"] }
h2 = { version = "0.2.0", features = ["stream"] }
http = "0.2"
log = "0.4"
rustls = "0.16"
thiserror = "1.0.9"
tokio = { version = "0.2.1", features = ["tcp", "io-util", "rt-core"] }
tokio-rustls = "0.12.1"
# disables default features, i.e. openssl...
trust-dns-proto = { version = "0.19.2", path = "../proto", features = ["tokio-runtime"], default-features = false }
trust-dns-rustls = { version = "0.19.2", path = "../rustls", default-features = false }
typed-headers = "0.2"
webpki-roots = { version = "0.18" }
webpki = "0.21"

[dev-dependencies]
env_logger = "0.7"
futures = { version = "0.3.0", default-features = false, features = ["std", "executor"] }
