[package]
name = "trust-dns-openssl"
version = "0.19.7"
authors = ["Benjamin Fry <benjaminfry@me.com>"]
edition = "2018"

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = """
Trust-DNS is a safe and secure DNS library. This is an extension for the Trust-DNS client to use tokio-openssl for TLS.
"""

# These URLs point to more information about the repository
documentation = "https://docs.rs/trust-dns-openssl"
homepage = "http://www.trust-dns.org/index.html"
repository = "https://github.com/bluejekyll/trust-dns"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["DNS", "BIND", "dig", "named", "dnssec"]
categories = ["network-programming"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MIT/Apache-2.0"

[badges]
#github-actions = { repository = "bluejekyll/trust-dns", branch = "master", workflow = "test" }
codecov = { repository = "bluejekyll/trust-dns", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[features]
default = ["backtrace"]
backtrace = ["trust-dns-proto/backtrace"]

dns-over-openssl = []

# WARNING: there is a bug in the mutual tls auth code at the moment see issue #100
# mtls = ["tls"]

[lib]
name = "trust_dns_openssl"
path = "src/lib.rs"

[dependencies]
futures = { version = "0.3.4", default-features = false, features = ["std"] }
openssl = { version = "0.10", features = ["v102", "v110"] }
tokio-openssl = "0.4.0"
tokio = "0.2.16"
trust-dns-proto = { version = "0.19.7", path = "../proto", features = ["openssl"] }

[dev-dependencies]
openssl = { version = "0.10", features = ["v102", "v110"] }
tokio = "0.2.16"
