[package]
name = "hickory-proto"

description = """
hickory-proto is a safe and secure low-level DNS library. This is the foundational DNS protocol
library used by the other higher-level Hickory DNS crates.
"""

documentation = "https://docs.rs/hickory-proto"
readme = "README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[features]
std = [
    "data-encoding/std",
    "ipnet/std",
    "rand/std",
    "rand/thread_rng",
    "ring?/std",
    "thiserror/std",
    "tracing/std",
    "url/std",
]

dnssec-aws-lc-rs = ["dep:aws-lc-rs", "aws-lc-rs/aws-lc-sys", "aws-lc-rs/ring-io", "__dnssec"]
dnssec-ring = ["dep:ring", "__dnssec"]
__dnssec = ["dep:bitflags", "dep:rustls-pki-types", "dep:time", "std"]
testing = ["std"]

text-parsing = ["std"]
default = ["std"]

serde = ["dep:serde", "std", "url/serde"]

# enables experimental the mDNS (multicast) feature
mdns = []

# enables a custom random function backed by a no_std compatible mutex
no-std-rand = ["once_cell/critical-section", "dep:critical-section"]

wasm-bindgen = ["dep:wasm-bindgen-crate", "dep:js-sys"]

access-control  = ["std", "dep:prefix-trie"]

[dependencies]
aws-lc-rs = { workspace = true, optional = true }
bitflags = { workspace = true, optional = true }
critical-section = { workspace = true, optional = true }
data-encoding = { workspace = true, features = ["alloc"] }
idna.workspace = true
ipnet.workspace = true
js-sys = { workspace = true, optional = true }
once_cell = { workspace = true }
prefix-trie = {  workspace = true, optional = true }
rand = { workspace = true, features = ["std_rng"] }
ring = { workspace = true, optional = true, features = ["std"] }
rustls-pki-types = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror.workspace = true
time = { workspace = true, optional = true }
tinyvec = { workspace = true, features = ["alloc"] }
tracing = { workspace = true, default-features = false }
url = { workspace = true }
wasm-bindgen-crate = { workspace = true, optional = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = { workspace = true }

[dev-dependencies]
test-support.workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
max_combination_size = 2
denylist = ["__tls", "__https", "__quic", "__h3", "__dnssec"]
