[package]
name = "hickory-recursor"

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = """
*WARNING* This library is experimental

Hickory DNS Recursor is a safe and secure DNS recursive resolver with DNSSEC support.
 Hickory DNS is based on the Tokio and Futures libraries, which means
 it should be easily integrated into other software that also use those
 libraries. This library can be used as in the server and binary for performing recursive lookups.
"""

# These URLs point to more information about the repository
documentation = "https://docs.rs/hickory-recursor"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[features]
backtrace = ["dep:backtrace", "hickory-proto/backtrace", "hickory-resolver/backtrace"]

dnssec-aws-lc-rs = ["hickory-proto/dnssec-aws-lc-rs", "hickory-resolver/dnssec-aws-lc-rs", "__dnssec"]
dnssec-ring = ["hickory-proto/dnssec-ring", "hickory-resolver/dnssec-ring", "__dnssec"]
__dnssec = []

dns-over-rustls-aws-lc-rs = [
    "hickory-proto/dns-over-rustls-aws-lc-rs",
    "hickory-resolver/dns-over-rustls-aws-lc-rs",
]
dns-over-https-rustls-aws-lc-rs = [
    "hickory-proto/dns-over-https-rustls-aws-lc-rs",
    "hickory-resolver/dns-over-https-rustls-aws-lc-rs",
    "dns-over-rustls-aws-lc-rs",
]
dns-over-quic-aws-lc-rs = [
    "hickory-proto/dns-over-quic-aws-lc-rs",
    "hickory-resolver/dns-over-quic-aws-lc-rs",
    "dns-over-rustls-aws-lc-rs",
]
dns-over-h3-aws-lc-rs = [
    "hickory-proto/dns-over-h3-aws-lc-rs",
    "hickory-resolver/dns-over-h3-aws-lc-rs",
    "dns-over-quic-aws-lc-rs",
]

dns-over-rustls-ring = [
    "hickory-proto/dns-over-rustls-ring",
    "hickory-resolver/dns-over-rustls-ring",
]
dns-over-https-rustls-ring = [
    "hickory-proto/dns-over-https-rustls-ring",
    "hickory-resolver/dns-over-https-rustls-ring",
    "dns-over-rustls-ring",
]
dns-over-quic-ring = [
    "hickory-proto/dns-over-quic-ring",
    "hickory-resolver/dns-over-quic-ring",
    "dns-over-rustls-ring",
]
dns-over-h3-ring = [
    "hickory-proto/dns-over-h3-ring",
    "hickory-resolver/dns-over-h3-ring",
    "dns-over-quic-ring",
]

serde = [
    "dep:serde",
    "hickory-proto/serde",
    "hickory-resolver/serde",
]

testing = []

[lib]
name = "hickory_recursor"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
async-recursion.workspace = true
backtrace = { version = "0.3.50", optional = true }
bytes.workspace = true
cfg-if.workspace = true
enum-as-inner.workspace = true
futures-util = { workspace = true, default-features = false, features = ["std"] }
ipnet.workspace = true
lru-cache.workspace = true
parking_lot.workspace = true
prefix-trie.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
test-support.workspace=true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["net"] }
hickory-proto.workspace = true
hickory-resolver = { workspace = true, features = ["tokio"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tracing-subscriber.workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
max_combination_size = 2
denylist = ["__dns-over-tls", "__dns-over-https", "__dns-over-quic", "__dns-over-h3", "__dnssec"]
