[package]
name = "hickory-resolv-conf"
description = """A resolv.conf file parser"""
documentation = "https://docs.rs/hickory-resolv-conf"
readme = "README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
quick-error = "2.0.0"
hostname = { version = "^0.3", optional = true }

[features]
system = ["hostname"]

[lib]
name = "resolv_conf"
path = "src/lib.rs"
